Fix spacing of user portrait to not push text too far to the right

--- a/app/assets/stylesheets/partials/_app.sass
+++ b/app/assets/stylesheets/partials/_app.sass
@@ -406,16 +406,14 @@ h1#head
   padding: 5px
   text-shadow: #050505 3px 3px 3px
   .img
-    width: 130px
+    width: 84px
     border: 1px solid #555555
-    height: 70px
+    height: 84px
     overflow: hidden
     float: left
     position: relative
     img
       position: absolute
-      left: 3px
-      bottom: -12px
   &.goblin .img img
     left: -190px
     bottom: -45px
@@ -428,7 +426,7 @@ h1#head
   &.orc .img img
     bottom: -43px
   .info
-    margin-left: 150px
+    margin-left: 94px
     text-align: left
     font-size: 2.8em
     display: block
